# python-perks

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
algorithms/: README.md
algorithms/searching/: linear_search.py
algorithms/sorting/: insertion_sort.py  merge_sort.py  quick_sort.py  selection_sort.py
data_structures/: doubly_linked_list.py
design_patterns/: singleton.py
notes/c04_decision_making/: README.md
notes/c05_loops/: README.md
notes/c06_functions/: README.md
notes/c07_oop/: README.md
notes/c08_modules_packages/: README.md
notes/c09_file/: README.md
notes/c10_exceptions/: README.md
notes/c16_decorators/code/: ch1403_class_based_decorator.py
notes/c17_mixins/: README.md
notes/c17_mixins/example/: ch1701_mixin.py
notes/c18_python_http/example/: ch1801_http_client.py
problem_solving/: README.md
problem_solving/basic/: gcd.py  matrix_multiplication.py  median.py  practical_number.py  reverse_digits.py
problem_solving/dp/: coin-change.py  coin_change.py  fibonacci.py
resource/c15_type_hinting/: README.md
resource/c15_type_hinting/example/: ch1501_basic_type_hinting.py  ch1502_function_hintingpy  ch1503_advanced_hinting.py  ch1503_typing_module.py  ch1504_advanced_hinting.py
resource/c16_decorators/: README.md
resource/c16_decorators/code/: ch1401_decorator.py  ch1402_decorator_factory.py  (+1 more)
src/algorithms/: README.md
src/data_structures/: README.md  binary_tree.py  linked_list.py  queue.py  stack.py
src/design_patterns/: README.md  adapter.py  builder.py  command.py  decorator.py  factory.py
(+5 files in other folders)
