[project]
name="python-perks"
version = "4.0.1"
description="A repository for Python course notes, examples, and lab exercises targeted to students, professionals, and enthusiasts."
authors=[
    { name="Sudip Ghimire", email="ghimiresdp@gmail.com" },
]
license="MIT"
readme="README.md"
requires-python=">=3.10"

dependencies=[
    "requests>=2.32.3",
]

[dependency-groups]
dev=[
    "ipython>=8.31.0",
    "ruff>=0.8.4",
]
test=[
    "pytest>=8.3.4",
]

[tool.ruff]
line-length=88
indent-width=4
target-version="py312"
# Exclude a variety of commonly ignored directories.
exclude=[
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style="double"
indent-style="space"
skip-magic-trailing-comma=false
